@@ -60,6 +60,8 @@ index =
     name:portal_type      type:string stored:true
     name:review_state     type:string stored:true
     name:SearchableText   type:text copyfield:default stored:false
+    name:searchwords      type:string stored:false multivalued:true
+    name:showinsearch     type:boolean stored:false
     name:Subject          type:string copyfield:default stored:true multivalued:true
     name:Title            type:text copyfield:default stored:true
     name:Type             type:string stored:true
